# localfinance

./: .env.example  Dockerfile  LICENSE  LMSTUDIO_SETUP.md  README.md  ai_service.py  docker-compose.yml  main.py  parsers.py  pyproject.toml  requirements.txt  tools.py  vdb.py
