[project]
name = "localfinance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "jinja2>=3.1.6",
    "ollama>=0.3.3",
    "openai>=1.0.0",
    "pandas==2.2.2",
    "pdfplumber==0.11.2",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "python-multipart==0.0.9",
    "qdrant-client==1.10.1",
    "uvicorn==0.30.1",
]
